feat(ui): create action to toggle the sidebar

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>FPF</title>
+    <link
+      rel="icon"
+      href="favicon.ico"
+    />
+    <title>SportCenter</title>
   </head>
   <body>
     <div id="root"></div>
